# blg_moire

./: .gitignore  Cargo.toml
plot/: plot_dos.py  plot_dos_diff.py  plot_spectrum.py
src/: dos.rs  lib.rs  model.rs
