[package]
name = "model_dos"
version = "0.1.0"
authors = ["Tim Lovorn <tflovorn@austin.utexas.edu>"]
publish = false

[dependencies]
tightbinding = { path = "../tightbinding" }

[dev-dependencies]
pre-commit = "0.5.2"

[package.metadata.precommit]
fmt = "cargo fmt -- --write-mode diff 2>&1"
test = "cargo test 2>&1"
